Table chunk {
  id BIGINT
  hash STRING
  iv STRING
  start BIGINT
  end BIGINT
  size BIGINT
  datasetId BIGINT
  createdAt DATETIME
  updatedAt DATETIME
  deletedAt DATETIME
}
Ref: chunk.datasetId > dataset.id

Table dataset {
  id BIGINT
  mnemonic STRING
  name STRING
  fileName STRING
  path STRING
  hash STRING
  size BIGINT
  keyHash STRING
  createdBy STRING
  validated DATETIME
  createdAt DATETIME
  updatedAt DATETIME
  deletedAt DATETIME
}

Table event {
  id BIGINT
  sub STRING
  mnemonic STRING
  type INT
  event STRING
  message STRING
  day DATEONLY
  createdAt DATETIME
  updatedAt DATETIME
}

Table key {
  id BIGINT
  key STRING
  datasetId BIGINT
  publicKeyId BIGINT
  createdAt DATETIME
  updatedAt DATETIME
  deletedAt DATETIME
}
Ref: key.datasetId > dataset.id
Ref: key.publicKeyId > public_key.id

Table member {
  id BIGINT
  sub STRING
  permission INT
  datasetId BIGINT
  createdAt DATETIME
  updatedAt DATETIME
  deletedAt DATETIME
}
Ref: member.datasetId > dataset.id

Table public_key {
  id BIGINT
  hash STRING
  name STRING
  email STRING
  sub STRING
  data JSON
  isRootKey BOOLEAN
  confirmedBy STRING
  confirmed DATETIME
  createdAt DATETIME
  updatedAt DATETIME
  deletedAt DATETIME
}

Table token {
  id BIGINT
  token STRING
  sub STRING
  name STRING
  email STRING
  scopes STRING
  lifetime BIGINT
  timestamp DATETIME
  refresh BOOLEAN
  createdAt DATETIME
  updatedAt DATETIME
}
